--- a/src/app/ccadmin/drugCode/ccadminCreateDrugCode.component.html
+++ b/src/app/ccadmin/drugCode/ccadminCreateDrugCode.component.html
@@ -46,6 +46,11 @@
   <button [disabled]="isEmpty" type="submit" class="btn btn-primary" value="Add">Add drug</button>
 </div>
 </form>
+<div>
+  <form>
+    <input/>   <button class="btn-info" type="submit">Filter</button>
+  </form>
+</div>
 <p align="left" style="color:#33cabb">List of all drugs</p>
 <table class="table table-bordered table-striped">
   <thead class = "thead dark">
@@ -56,6 +61,8 @@
   </tr>
 
   </thead>
+
+
 
   <tbody>
 
