--- a/src/app/ccadmin/registerClinicAdmin/ccadmin.component.html
+++ b/src/app/ccadmin/registerClinicAdmin/ccadmin.component.html
@@ -98,6 +98,11 @@
   </form>
 </div>
 
+<div>
+  <form>
+    <input/>   <button class="btn-info" type="submit">Filter</button>
+  </form>
+</div>
 <p align="left" style="color:#33cabb">List of all clinic admins</p>
 
 <table class="table table-bordered table-striped">
