--- a/src/app/ccadmin/adminInfo/ccadminInfo.component.html
+++ b/src/app/ccadmin/adminInfo/ccadminInfo.component.html
@@ -14,11 +14,11 @@
     <div class="input-group form-group">
       <div class="input-group-prepend">
           <span class="input-group-text">
-            <i class="fa fa-address-book" aria-hidden="true"></i>
+            <i class="fa fa-address-book">First Name</i>
           </span>
       </div>
-      <input type="text" formControlName="firstname" id="firstname" class="form-control"
-             placeholder="First Name"
+      <input type="text" [ngModelOptions]="{standalone: true}" id="firstname" class="form-control"
+             placeholder="{{user1.firstName}}"
              [(ngModel)]="user.firstName"/>
     </div>
 
@@ -26,39 +26,39 @@
     <div class="input-group form-group">
       <div class="input-group-prepend">
           <span class="input-group-text">
-            <i class="fa fa-address-book" aria-hidden="true"></i>
+            <i class="fa fa-address-book" >Last Name</i>
           </span>
       </div>
-      <input formControlName="lastname" type="text" id="lastname" class="form-control" required placeholder="Last Name"
-             [(ngModel)]="user.lastName"/>
+      <input  type="text" id="lastname" class="form-control" required
+      placeholder="{{user1.lastName}}"             [(ngModel)]="user.lastName" [ngModelOptions]="{standalone: true}"/>
     </div>
 
     <div class="input-group form-group">
       <div class="input-group-prepend">
           <span class="input-group-text">
-            <i class="fa fa-address-book" aria-hidden="true"></i>
+            <i class="fa fa-address-book" >Email</i>
           </span>
       </div>
-      <input type="text" [ngModelOptions]="{standalone: true}" id="city" class="form-control input-sm" required placeholder="City"
-             [(ngModel)]="user.city"/>
+      <input type="text" [ngModelOptions]="{standalone: true}" id="email" class="form-control input-sm" required placeholder="{{user1.email}}"
+             [(ngModel)]="user.email"/>
     </div>
     <div class="input-group form-group">
       <div class="input-group-prepend">
           <span class="input-group-text">
-            <i class="fa fa-address-book" aria-hidden="true"></i>
+            <i class="fa fa-address-book">Address</i>
           </span>
       </div>
-      <input type="text" [ngModelOptions]="{standalone: true}" id="address" class="form-control" required placeholder="Address"
+      <input type="text" [ngModelOptions]="{standalone: true}" id="address" class="form-control" required placeholder="{{user1.address}}"
              [(ngModel)]="user.address"/>
     </div>
     <div class="input-group form-group">
       <div class="input-group-prepend">
           <span class="input-group-text">
-            <i class="fa fa-address-book" aria-hidden="true"></i>
+            <i class="fa fa-address-book">SSN</i>
           </span>
       </div>
-      <input type="text" [ngModelOptions]="{standalone: true}" id="country" class="form-control" required placeholder="Country"
-             [(ngModel)]="user.country"/>
+      <input type="text" [ngModelOptions]="{standalone: true}" id="ssn" class="form-control" required placeholder="{{user1.ssn}}"
+             [(ngModel)]="user.ssn"/>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
