--- a/src/app/patient/history/historyPatient.component.html
+++ b/src/app/patient/history/historyPatient.component.html
@@ -39,6 +39,21 @@
       <th scope="col">Surgeries</th>
       <th scope="col">Examination</th>
     </tr>
+    <tr>
+      <th>08.04.2019</th>
+      <th>/</th>
+      <th>Lungs</th>
+    </tr>
+    <tr>
+      <th>09.07.2019</th>
+      <th>Heart</th>
+      <th>/</th>
+    </tr>
+    <tr>
+      <th>15.03.2008</th>
+      <th>/</th>
+      <th>Blood pressure</th>
+    </tr>
     </thead>
   </table>
 
