--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,6 +84,9 @@
         <li class="nav-item" *ngIf="doctorloged">
           <a class="nav-link" routerLink="/listOfPatients">All Patients</a>
         </li>
+        <li class="nav-item" *ngIf="doctorloged">
+          <a class="nav-link" routerLink="/editDocInfo">Edit info</a>
+        </li>
 
         <li class="nav-item">
           <a (click)="logout()" class="nav-link" routerLink="/">Logout</a>
