creating recipes for patients by doctor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,6 +77,9 @@
         <li class="nav-item" *ngIf="doctorloged">
           <a class="nav-link" routerLink="/holidayAbsence">Holiday/Absence</a>
         </li>
+        <li class="nav-item" *ngIf="doctorloged">
+          <a class="nav-link" routerLink="/dar">Show Patients</a>
+        </li>
 
         <li class="nav-item" *ngIf="doctorloged">
         <a class="nav-link" routerLink="/booking">Booking</a>
