--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,6 +58,9 @@
         <li class="nav-item" *ngIf="ccadminloged">
           <a class="nav-link" routerLink="/ccadminDrug">Add drug</a>
         </li>
+        <li class="nav-item" *ngIf="ccadminloged">
+          <a class="nav-link" routerLink="/ccaDiagnose">Add diagnose</a>
+        </li>
 
         <!--Staff-->
         <li class="nav-item" *ngIf="ccadminloged">
