--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,6 +91,10 @@
           <a class="nav-link" routerLink="/listOfPatients">All Patients</a>
         </li>
 
+        <li class="nav-item" *ngIf="nurseloged">
+          <a class="nav-link" routerLink="/recipesValidation">Recipes validation</a>
+        </li>
+
         <li class="nav-item">
           <a (click)="logout()" class="nav-link" routerLink="/">Logout</a>
         </li>
@@ -128,11 +132,11 @@
             <h3 class="text-center text-info">Login</h3>
             <div class="form-group">
               <label class="text-info">Email:</label><br>
-              <input type="text" name="email" id="logemail" class="form-control" [(ngModel)]="logemail" [ngModelOptions]="{standalone:true}">
+              <input type="text" name="email" class="form-control" [(ngModel)]="logemail" [ngModelOptions]="{standalone:true}">
             </div>
             <div class="form-group">
               <label class="text-info">Password:</label><br>
-              <input type="password" name="password" id="logpassword" [(ngModel)]="logpassword" [ngModelOptions]="{standalone:true}" class="form-control">
+              <input type="password" name="password" [(ngModel)]="logpassword" [ngModelOptions]="{standalone:true}" class="form-control">
             </div>
             <div class="form-group">
 
