--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -8,7 +8,7 @@
 <br>
 <br>
 <div class="container container-table input-group input-group-sm">
-  <form (ngSubmit)="onSubmit()" [formGroup]="angForm">
+  <form (ngSubmit)="onSubmit()" [formGroup]="angForm11">
     <div class="form-group">
     <h2 style="color:#33cabb">Registration</h2>
     </div>
@@ -98,7 +98,7 @@
       <span class="text-danger" *ngIf="f.ssn.errors && (f.ssn.dirty || f.ssn.touched)">SSN must containts 13 digits</span>
     </div>
     <div class="form-group text-center">
-      <button [disabled]="angForm.invalid || angForm.pristine || checkPassword" type="submit" class="btn btn-success">Sign up</button>
+      <button [disabled]="angForm11.invalid || angForm11.pristine || checkPassword" type="submit" class="btn btn-success">Sign up</button>
     </div>
   </form>
 </div>
