--- a/src/app/doctor/workCalendar/workCalendar.component.html
+++ b/src/app/doctor/workCalendar/workCalendar.component.html
@@ -5,9 +5,17 @@
 <br>
 <br>
 
+<full-calendar
+  defaultView="dayGridMonth"
+  [plugins]="calendarPlugins"
+  [weekends]="false"
+  [events]="[
+    { title: 'event 1', date: '2020-04-01' },
+    { title: 'event 2', date: '2020-04-02' }
+  ]"
+></full-calendar>
 
-
-<div id="calendar"></div>
+<!--<div id="calendar"></div>
 
 <p align="left" style="color:#33cabb">Selected term: </p>
 <table class="table table-bordered table-striped">
@@ -16,7 +24,7 @@
   <tr>Start date:</tr>
   <tr>End date:</tr>
   </thead>
-</table>
+</table>-->
 
 </body>
 </html>
