filling work calendar

--- a/src/app/doctor/WorkCalFinal/WorkCalFinal.component.html
+++ b/src/app/doctor/WorkCalFinal/WorkCalFinal.component.html
@@ -5,5 +5,5 @@
   [plugins]="calendarPlugins"
   (dateClick)="handleDateClick($event)"
   [weekends]="true"
-  [events]= calendarEvents
+  [events]= "calendarEvents"
 ></full-calendar>
