--- a/src/app/nurse/recipesValidation/recipesValidation.component.html
+++ b/src/app/nurse/recipesValidation/recipesValidation.component.html
@@ -20,7 +20,7 @@
     <td>{{rec.drug.drugName}}</td>
     <td>{{rec.drug.description}}</td>
     <td>{{rec.drug.price}}$</td>
-    <td><button class="btn badge-primary" (click)="validateRecipe(rec.id, this.user.email)">Validate recipe</button></td>
+    <td><button class="btn badge-primary" (click)="validateRecipe(rec.id)">Validate recipe</button></td>
   </tr>
 </table>
 
