--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,9 +83,11 @@
         </li>
 
         <!--Doctor-->
+        <!--
         <li class="nav-item" *ngIf="doctorloged">
           <a class="nav-link" routerLink="/workCalendar">Work Calendar</a>
-        </li>
+        </li> -->
+
         <li class="nav-item" *ngIf="doctorloged">
           <a class="nav-link" routerLink="/holidayAbsence">Holiday/Absence</a>
         </li>
@@ -110,7 +112,7 @@
           <a class="nav-link" routerLink="/scheduler">Scheduler</a>
         </li>
 
-        <li class="nav-item" *ngIf="doctorloged">
+        <li class="nav-item" *ngIf="doctorloged || nurseloged">
           <a class="nav-link" routerLink="/workCal">WC</a>
         </li>
 
@@ -140,7 +142,10 @@
         </li>
 
         <li class="nav-item" *ngIf="cadminloged">
-          <a class="nav-link" routerLink="/surgery">Show surgery requests</a>
+          <a class="nav-link" routerLink="/surgery">Surgery requests</a>
+        </li>
+        <li class="nav-item" *ngIf="cadminloged">
+          <a class="nav-link" routerLink="/appointments">Appointment requests</a>
         </li>
 
         <li class="nav-item">
