--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,14 +72,16 @@
 
         <!--Patient-->
         <li class="nav-item" *ngIf="patientloged">
-          <a class="nav-link" routerLink="/selectClinic">Select clinic</a>
+          <a class="nav-link" routerLink="/selectClinic">Browse Clinics</a>
         </li>
         <li class="nav-item" *ngIf="patientloged">
-          <a class="nav-link" routerLink="/historyPatient">History of examination</a>
+          <a class="nav-link" routerLink="/historyPatient">History</a>
         </li>
-
         <li class="nav-item" *ngIf="patientloged">
           <a class="nav-link" routerLink="/scheduleApp">Schedule an appointment</a>
+        </li>
+        <li class="nav-item" *ngIf="patientloged">
+          <a class="nav-link" routerLink="/upcomingEvents">Upcoming appointments</a>
         </li>
 
         <!--Doctor-->
@@ -151,12 +153,15 @@
           <a class="nav-link" routerLink="/fastapp">Create fast appointment</a>
         </li>
 
+      </ul>
+      <ul class="navbar-nav ml-auto">
+
+        <li class="nav-item" *ngIf="patientloged">
+          <a class="nav-link" routerLink="/profile">Profile</a>
+        </li>
         <li class="nav-item">
           <a (click)="logout()" class="nav-link" routerLink="/">Logout</a>
         </li>
-
-
-
       </ul>
     </div>
   </nav>
