--- a/src/app/patient/scheduleApp/scheduleApp.component.html
+++ b/src/app/patient/scheduleApp/scheduleApp.component.html
@@ -3,17 +3,13 @@
 <br>
 <br>
 <br>
-<div class="container container-table input-group input-group-sm">
-  <form >
-    <div class="form-group">
-      <h2 style="color:#33cabb">Patient Profile</h2>
-      <h5 style="color:#33cabb">Schedule an appointment</h5>
-    </div>
-
-
-    <div class="form-group">
-      <p align="left" style="color:#33cabb">Appointment type: </p>
-      <select id="selectedType" [selectedIndex]="0" [(ngModel)]="selectedType" [ngModelOptions]="{standalone: true}" class = "form-group input-group-sm">
+<div style="text-align: center;" class="container container-table input-group input-group-sm">
+  <h1 style="margin-bottom: 20px;font-weight: bold; width:100%">Schedule an appointment</h1>
+  <form style="margin:auto">
+    <div style = "text-align: center" class="form-group">
+      <p style="color:darkcyan">Appointment type: </p>
+      <select style="border-style:groove;border-radius: 5px;height: 35px;width: 170px;margin: auto;" id="selectedType" [selectedIndex]="0"
+              [(ngModel)]="selectedType" [ngModelOptions]="{standalone: true}" class = "form-group input-group-sm">
         <option value="" disabled selected="selected">--Appointment type--
         </option>
         <option *ngFor="let at of appTypes; let i = index" [value]="appTypes[i].type">
@@ -23,27 +19,34 @@
     </div>
 
     <div class="form-group">
-      <p align="left" style="color:#33cabb">Start date: </p>
-      <input type="date" id="startDate" [(ngModel)]="selectedDate" [ngModelOptions]="{standalone: true}" class="form-control input-sm" required placeholder="StartDate">
+      <p style="color:darkcyan">Appointment date:</p>
+      <input style="border-style:groove;border-radius: 5px;height: 35px;width: 170px;margin: auto" type="date" id="startDate" required placeholder="StartDate"
+             [(ngModel)]="selectedDate" [ngModelOptions]="{standalone: true}" class="form-control input-sm">
     </div>
 
-    <div>
+    <div style="margin-top: 25px; margin-bottom: 40px">
       <form>
-        <input type="submit" (click)="filterChange()" value="Search"/>
+        <input class="btn badge-success" type="submit" (click)="filterChange()" value="Search" style="width: 90px;"/>
       </form>
     </div>
 
-    <div *ngIf="showClinicFilter">
+    <div style="margin-bottom: 30px" *ngIf="showClinicFilter">
+      <h3 style="margin-bottom: 20px;font-weight: bold; width:100%">Available Clinics</h3>
       <form>
-        <input [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredString"  (change)="filterClinic()"/>   <button class="btn-info" type="submit">Filter</button>
+        <input style="border-radius: 5px;border-style: groove;margin-right: 15px;" placeholder="Clinic Name"
+               [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredStringClinic"  (change)="filterClinic()"/>
+        <input style="border-radius: 5px;border-style: groove;margin-right: 15px;" placeholder="Minimum rating"
+               [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredStringClinicRating"  (change)="filterClinic()"/>
+        <input style="border-radius: 5px;border-style: groove;margin-right: 15px;" placeholder="Maximum price"
+               [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredStringClinicMaxPrice"  (change)="filterClinic()"/>
+        <button style="border-radius: 5px;" class="btn-info" type="submit">Filter</button>
       </form>
     </div>
 
     <div *ngIf="showClinics">
 
     <!-- SAMO FILTRIRANE KLINIKE CE BITI -->
-    <p align="left" style="color:#33cabb">List of all clinics</p>
-    <table class="table table-bordered table-striped">
+    <table style="width: 900px" class="table table-bordered table-striped">
       <thead class = "thead dark">
       <tr>
         <th scope="col">Name</th>
@@ -60,12 +63,12 @@
       <tbody>
 
       <tr *ngFor="let clinic of filteredClinicsByField">
-        <td>{{clinic.clinicName}}</td>
-        <td>{{clinic.address}}</td>
-        <td>{{clinic.rating}}</td>
-        <td>{{clinic.selectedATPD.price}}</td>
-        <td>{{100 - (100 * clinic.selectedATPD.discount)}}%</td>
-        <td><button class="btn badge-success" id="{{clinic.clinicName}}" (click)="onSubmit($event)">Choose doctor</button></td>
+        <td style="vertical-align: middle">{{clinic.clinicName}}</td>
+        <td style="vertical-align: middle">{{clinic.address}}</td>
+        <td style="vertical-align: middle">{{clinic.rating}}</td>
+        <td style="vertical-align: middle">{{clinic.selectedATPD.price}}</td>
+        <td style="vertical-align: middle">{{100 - (100 * clinic.selectedATPD.discount)}}%</td>
+        <td style="vertical-align: middle"><button class="btn badge-success" id="{{clinic.clinicName}}" (click)="onSubmit($event)">Choose doctor</button></td>
       </tr>
 
       </tbody>
@@ -73,18 +76,21 @@
     </table>
     </div>
 
-    <div *ngIf="showDoctorFilter">
-      <p align="left" style="color:#33cabb">List of all available doctors</p>
-
+    <div style="margin-bottom: 30px" *ngIf="showDoctorFilter">
+      <h3 style="margin-bottom: 20px;font-weight: bold; width:100%">Available doctors for the given date</h3>
 
       <form>
-        <input [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredString2"  (change)="filterDoctors()"/>   <button class="btn-info" type="submit">Filter</button>
+        <input style="border-radius: 5px;border-style: groove;margin-right: 15px;" placeholder="Doctors Name"
+               [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredStringDoctor"  (change)="filterDoctors()"/>
+        <input style="border-radius: 5px;border-style: groove;margin-right: 15px;" placeholder="Minimum rating"
+               [ngModelOptions]="{standalone: true}" [(ngModel)]="filteredStringDoctorRating"  (change)="filterDoctors()"/>
+        <button style="border-radius: 5px;" class="btn-info" type="submit">Filter</button>
       </form>
     </div>
 
     <div *ngIf="showDoctors">
 
-    <table class="table table-bordered table-striped">
+    <table style="width: 900px" class="table table-bordered table-striped">
       <thead class = "thead dark">
       <tr>
         <th scope="col">First name</th>
@@ -97,20 +103,20 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let dr of filteredDoctors; let i = index">
+      <tr *ngFor="let dr of filterDoctorsByField; let i = index">
 
-        <td>{{dr.doctor.firstName}}</td>
-        <td>{{dr.doctor.lastName}}</td>
-        <td>{{dr.doctor.rating}}</td>
+        <td style="vertical-align: middle">{{dr.doctor.firstName}}</td>
+        <td style="vertical-align: middle">{{dr.doctor.lastName}}</td>
+        <td style="vertical-align: middle">{{dr.doctor.rating}}</td>
         <!-- Polje za izlistavanje slobodnih termina-->
-        <td><select class="form-control form-group" id="orders"  [(ngModel)]="this.takeTimeFromDropDown" [ngModelOptions]="{standalone: true}">
+        <td style="vertical-align: middle"><select class="form-control form-group" id="orders"  [(ngModel)]="this.takeTimeFromDropDown" [ngModelOptions]="{standalone: true}">
           <option value="" disabled selected="selected">--Select time--
           </option>
           <option *ngFor="let ap of dr.freeTimes; let i = index" [value]="ap">
             {{ap}}
           </option>
         </select></td>
-        <td><button class="btn badge-success" id="{{dr.doctor.email}}" (click)="clickSchedule($event)">Schedule</button></td>
+        <td style="vertical-align: middle"><button class="btn badge-success" id="{{dr.doctor.email}}" (click)="clickSchedule($event)">Schedule</button></td>
 
 
       </tr>
